--- a/Assignment_2/src/GUI/AdminUI.form
+++ b/Assignment_2/src/GUI/AdminUI.form
@@ -126,6 +126,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Person"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnPersonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
@@ -186,6 +189,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Doctor"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnDoctorActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
