--- a/Assignment_2/src/GUI/ViewPersonJPanel.form
+++ b/Assignment_2/src/GUI/ViewPersonJPanel.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -71,9 +71,9 @@
                                       <Component id="lblAge" alignment="1" min="-2" pref="73" max="-2" attributes="0"/>
                                       <Component id="lblName" alignment="1" min="-2" pref="199" max="-2" attributes="0"/>
                                       <Group type="103" alignment="1" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="lblCommunity" alignment="1" pref="97" max="32767" attributes="0"/>
+                                          <Component id="lblCellno" alignment="1" pref="97" max="32767" attributes="0"/>
                                           <Component id="lblCity" alignment="1" max="32767" attributes="0"/>
-                                          <Component id="lblResidence" alignment="1" max="32767" attributes="0"/>
+                                          <Component id="lblAddress" alignment="1" max="32767" attributes="0"/>
                                           <Component id="lblGender" alignment="1" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -84,9 +84,9 @@
                                           <Component id="txtName" alignment="0" max="32767" attributes="0"/>
                                           <Component id="txtAge" alignment="0" max="32767" attributes="0"/>
                                           <Component id="txtGender" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="txtResidence" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="txtAddress" alignment="0" max="32767" attributes="0"/>
                                           <Component id="txtCity" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="txtCommunity" alignment="0" pref="130" max="32767" attributes="0"/>
+                                          <Component id="txtCellno" alignment="0" pref="130" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -138,8 +138,8 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lblResidence" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtResidence" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblAddress" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtAddress" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -148,8 +148,8 @@
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="lblCommunity" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCommunity" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblCellno" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtCellno" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnUpdate" min="-2" max="-2" attributes="0"/>
@@ -173,9 +173,9 @@
                     <Column editable="true" title="Name" type="java.lang.Object"/>
                     <Column editable="true" title="Age" type="java.lang.Object"/>
                     <Column editable="true" title="Gender" type="java.lang.Object"/>
-                    <Column editable="true" title="Residence" type="java.lang.Object"/>
+                    <Column editable="true" title="Address" type="java.lang.Object"/>
                     <Column editable="true" title="City" type="java.lang.Object"/>
-                    <Column editable="true" title="Community" type="java.lang.Object"/>
+                    <Column editable="true" title="Cellno" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
@@ -238,13 +238,13 @@
             <Property name="text" type="java.lang.String" value="Gender:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblResidence">
+        <Component class="javax.swing.JLabel" name="lblAddress">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Residence:"/>
+            <Property name="text" type="java.lang.String" value="Address:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblCity">
@@ -256,13 +256,13 @@
             <Property name="text" type="java.lang.String" value="City:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblCommunity">
+        <Component class="javax.swing.JLabel" name="lblCellno">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
-            <Property name="text" type="java.lang.String" value="Community:"/>
+            <Property name="text" type="java.lang.String" value="CellphoneNo:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtName">
@@ -271,11 +271,11 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtGender">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtResidence">
+        <Component class="javax.swing.JTextField" name="txtAddress">
         </Component>
         <Component class="javax.swing.JTextField" name="txtCity">
         </Component>
-        <Component class="javax.swing.JTextField" name="txtCommunity">
+        <Component class="javax.swing.JTextField" name="txtCellno">
         </Component>
         <Component class="javax.swing.JButton" name="btnUpdate">
           <Properties>
